src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if an active member of Congress</description>
        <inlineHelpText>True if an active member of Congress</inlineHelpText>
        <label>Active Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bioguide_ID__c</fullName>
        <label>Bioguide ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chamber__c</fullName>
        <description>Chamber this Legislator resides in</description>
        <inlineHelpText>Chamber this Legislator resides in</inlineHelpText>
        <label>Chamber</label>
        <picklist>
            <picklistValues>
                <fullName>House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Branch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Congressional_District__c</fullName>
        <label>Congressional District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Congressional_State__c</fullName>
        <label>Congressional State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Congressional_Website__c</fullName>
        <label>Congressional Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FEC_ID__c</fullName>
        <description>Congress member&apos;s Federal Election Comimission ID</description>
        <inlineHelpText>Congress member&apos;s Federal Election Comimission ID</inlineHelpText>
        <label>FEC ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_ID__c</fullName>
        <description>Congress member&apos;s Facebook ID</description>
        <inlineHelpText>Congress member&apos;s Facebook ID</inlineHelpText>
        <label>Facebook ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Govtrack_ID__c</fullName>
        <description>Unique ID for Govtrack.us</description>
        <inlineHelpText>Unique ID for Govtrack.us</inlineHelpText>
        <label>Govtrack ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Affiliation__c</fullName>
        <label>Party Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Democrat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Republican</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Twitter_ID__c</fullName>
        <description>Twitter handle</description>
        <inlineHelpText>Twitter handle</inlineHelpText>
        <label>Twitter ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Contact_Form__c</fullName>
        <label>Web Contact Form</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Youtube_Site__c</fullName>
        <description>Congress member&apos;s Youtube site</description>
        <inlineHelpText>Congress member&apos;s Youtube site</inlineHelpText>
        <label>Youtube Site</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>